--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,28 +1,5 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
 
-    <style name="ProfileItem">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:minHeight">48dp</item>
-        <item name="android:paddingVertical">14dp</item>
-        <item name="android:paddingHorizontal" tools:targetApi="26">12dp</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:drawableEnd">@drawable/baseline_arrow_forward_24</item>
-        <item name="android:drawablePadding">12dp</item>
-        <item name="android:clickable">true</item>
-        <item name="android:focusable">true</item>
-    </style>
-    <style name="logoutitem">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:minHeight">48dp</item>
-        <item name="android:paddingVertical">14dp</item>
-        <item name="android:paddingHorizontal" tools:targetApi="26">12dp</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:drawablePadding">12dp</item>
-        <item name="android:clickable">true</item>
-        <item name="android:focusable">true</item>
-    </style>
-    <string name="app_name">myminiprofile
-    </string>
+    <string name="app_name">myminiprofile</string>
 </resources>
